<package>
  <name>project_lmicp</name>
  <version>0.0.1</version>
  <description>
   project_lmicp 
  </description>
  <maintainer email="cuixiongyi2013@gmail.com">Xiongyi Cui</maintainer>
  <license>BSD</license>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>geometric_shapes</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>geometric_shapes</run_depend>


  <buildtool_depend>catkin</buildtool_depend>
</package>
