<package>
  <name>perception_model_based_detection</name>
  <version>0.0.1</version>
  <description>
	Model based detection	     
  </description>
  <maintainer email="cuixiongyi2013@gmail.com">Xiongyi Cui</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/perception_common</url>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>pcl</build_depend>
  
  
  <build_depend>std_msgs</build_depend>
  
  
  
  
  

  
  
  
  <run_depend>roscpp</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>pcl</run_depend>
  
  <run_depend>pcl_conversions</run_depend>
  <run_depend>std_msgs</run_depend>
  

  <buildtool_depend>catkin</buildtool_depend>
</package>
